--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,1">
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0">
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
@@ -95,6 +95,13 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btnSavePatches">
+          <property name="text">
+           <string>Save Patches</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
