--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,2">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0">
         <item>
@@ -126,6 +126,9 @@
       <item>
        <widget class="QVTKWidget" name="qvtkWidget"/>
       </item>
+      <item>
+       <widget class="TopPatchesWidget" name="TopPatchesPanel" native="true"/>
+      </item>
      </layout>
     </item>
    </layout>
@@ -136,7 +139,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>28</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuLeft_Pane">
@@ -161,9 +164,16 @@
     </property>
     <addaction name="actionScreenshot"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="action_View_TopPatches"/>
+   </widget>
    <addaction name="menuLeft_Pane"/>
    <addaction name="menuHelp"/>
    <addaction name="menuExport"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -257,6 +267,11 @@
     <string>Screenshot</string>
    </property>
   </action>
+  <action name="action_View_TopPatches">
+   <property name="text">
+    <string>Top Patches</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -268,6 +283,12 @@
    <class>PatchInfoWidget</class>
    <extends>QWidget</extends>
    <header>PatchInfoWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TopPatchesWidget</class>
+   <extends>QWidget</extends>
+   <header>TopPatchesWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
