--- a/TopPatchesWidget.ui
+++ b/TopPatchesWidget.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="2">
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,0,0,0,0,5">
+      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,0,0,0,0">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
@@ -26,7 +26,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QGraphicsView" name="gfxTarget"/>
+        <widget class="QGraphicsView" name="gfxTargetPatch"/>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -68,27 +68,6 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <item>
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>Patch Radius</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="txtPatchRadius">
-           <property name="toolTip">
-            <string>Sets the width/height of a square patch</string>
-           </property>
-           <property name="text">
-            <string>10</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
         <widget class="QPushButton" name="btnCompute">
          <property name="text">
           <string>Compute</string>
@@ -96,29 +75,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableWidget" name="tableWidget">
-         <property name="sortingEnabled">
-          <bool>true</bool>
-         </property>
-         <attribute name="horizontalHeaderStretchLastSection">
-          <bool>true</bool>
-         </attribute>
-         <column>
-          <property name="text">
-           <string>Patch</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Index</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Score</string>
-          </property>
-         </column>
-        </widget>
+        <widget class="QTableView" name="tblviewTopPatches"/>
        </item>
       </layout>
      </item>
