--- a/TopPatchesWidget.ui
+++ b/TopPatchesWidget.ui
@@ -89,6 +89,9 @@
        </item>
        <item>
         <widget class="QTableView" name="tblviewTopPatches">
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
          <property name="sortingEnabled">
           <bool>true</bool>
          </property>
