--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -109,12 +109,12 @@
          <item>
           <widget class="QLabel" name="label_12">
            <property name="text">
-            <string>Corr</string>
+            <string>PCA</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="lblCorrelation">
+          <widget class="QLabel" name="lblPCAScore">
            <property name="text">
             <string>0</string>
            </property>
