--- a/TopPatchesWidget.ui
+++ b/TopPatchesWidget.ui
@@ -51,9 +51,12 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="txtClusters">
-           <property name="text">
-            <string>3</string>
+          <widget class="QSpinBox" name="spinClusters">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>5</number>
            </property>
           </widget>
          </item>
@@ -64,7 +67,7 @@
          <item>
           <widget class="QLabel" name="label_6">
            <property name="text">
-            <string>Best patches:</string>
+            <string>Num. Best patches:</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
@@ -72,9 +75,15 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="txtNumberOfPatches">
-           <property name="text">
-            <string>5</string>
+          <widget class="QSpinBox" name="spinNumberOfBestPatches">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>10000</number>
+           </property>
+           <property name="value">
+            <number>10</number>
            </property>
           </widget>
          </item>
