--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -173,7 +173,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btnSavePatches_2">
+         <widget class="QPushButton" name="btnSavePatchPair">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
